# kube-depre

./: Cargo.toml  README.md  doc.md
.github/workflows/: audit.yaml  check_deprecated.yaml  ci.yaml  codecov.yaml  docker.yaml  publish_binaries.yaml  test.yaml
docker/: Dockerfile
release/: install.sh
src/: cluster.rs  file.rs  lib.rs  main.rs  utils.rs
tests/: hpav1.yaml  hpav2.yaml  hpav2beta1.yaml  hpav2beta2.yaml  integration.rs  integration_test.rs
tests/all/: cluster.rs  file.rs  mod.rs  utils.rs
tests/data/: crd.yaml
