[package]
name = "kube-depre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features  = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4.5"
kube = {version="0.71.0", features = ["runtime","derive"]}
k8s-openapi = {version = "0.14.0",features=["v1_22"]}
tokio = { version = "1.17.0", features = ["full"] }
anyhow="1.0"
env_logger = "0.9.0"
log = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.1.8", features = ["derive"] }
comfy-table = "5.0.1"
openssl = { version = "0.10", features = ["vendored"] }
csv="1.1.6"
jwalk = "0.6.0"
rayon ="1.5.1"
async-trait = "0.1.53"

[dev-dependencies]
pretty_assertions = "1"